[gd_scene load_steps=4 format=3 uid="uid://d36vhmh2po56y"]

[ext_resource type="Texture2D" uid="uid://bqp7naqr4nlk5" path="res://graphics/player/player.png" id="1_ft4c0"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_i6jq0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xdhsk"]
radius = 49.8197

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_i6jq0")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(47, 5)
rotation = 1.5708
texture = ExtResource("1_ft4c0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xdhsk")

[node name="GrenadeTimer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GunRear" type="Marker2D" parent="."]
position = Vector2(27, 25)

[node name="GunTip" type="Marker2D" parent="."]
position = Vector2(144, 25)

[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
